# hansard-spotlight

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
docs/: schema.mmd
src/backend/document_processor/: build.py  headers.py
src/backend/entity_recognizer/: lookup.py  record_linkage.py
src/backend/ingest/: Snakefile  hansard.py
src/backend/ingest/scripts/election/: governors.sql  mps.py  senators.sql
src/backend/ingest/scripts/election/presidential/: constituency.py  county.py  national.py
src/backend/ingest/scripts/geographical/: constituencies.sql  counties.sql
src/backend/ingest/scripts/parliament/: mps.py
src/backend/scrapers/: extract_parliament_profiles.py  get_parliament_urls  pdf_committee_extractor.py
src/backend/util/: helpers.py
src/datamodel/: Dockerfile  docker-compose.yml
src/hansard-spotlight/: main.py
src/notebooks/: notebook.py
src/spotlight/: main.py
